<resources>
    <string name="app_name">ShuttleMobile</string>


    <string name="mapbox_access_token">pk.eyJ1Ijoic3YyNSIsImEiOiJjbGJyenp0aG0wdXppM29sZXppZXB3dW9jIn0.pLUD2PQXNm4YOiG8dl1jVw</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_passenger">Passenger Notification Channel</string>
    <string name="channel_driver">Driver Notification Channel</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="elapsed_time">Elapsed time: </string>
    <string name="reason">Reason</string>
    <string name="panic_header">Specify a reason</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="panic">Panic</string>
    <string name="passenger_profile_picture">Passenger profile picture</string>
    <string name="passenger_name">Name</string>
    <string name="passenger_surname">Surname</string>
    <string name="phone_number">Phone number</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="star">star</string>
    <string name="yes">yes</string>
    <string name="average">AVERAGE</string>
    <string name="sum">SUM</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="give_your_favorite_ride_a_name">Give your favorite ride a name</string>
    <string name="favorite_ride_name">favorite ride name</string>
    <string name="name">Name</string>
</resources>