<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoriteDialog">

    <TextView
        android:id="@+id/d_favorite_prompt_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_d_favorite_name"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:text="@string/give_your_favorite_ride_a_name"
        android:contentDescription="@string/favorite_ride_name"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAlignment="textStart"
        />

    <EditText
        android:id="@+id/et_d_favorite_name"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/d_favorite_prompt_name"
        android:hint="@string/name" />

</androidx.constraintlayout.widget.ConstraintLayout>